@@ -117,12 +117,6 @@
           <trimStackTrace>false</trimStackTrace>
           <argLine>
             @{argLine}
-            --add-opens stormpot/stormpot=ALL-UNNAMED
-            --add-opens stormpot/blackbox=ALL-UNNAMED
-            --add-opens stormpot/extensions=ALL-UNNAMED
-            -Djunit.jupiter.execution.parallel.enabled=true
-            -Djunit.jupiter.execution.parallel.mode.classes.default=concurrent
-            -Djunit.jupiter.execution.timeout.default=30m
             -Djdk.attach.allowAttachSelf
           </argLine>
         </configuration>
@@ -135,12 +129,6 @@
           <trimStackTrace>false</trimStackTrace>
           <argLine>
             @{argLine}
-            --add-opens stormpot/stormpot=ALL-UNNAMED
-            --add-opens stormpot/blackbox=ALL-UNNAMED
-            --add-opens stormpot/extensions=ALL-UNNAMED
-            -Djunit.jupiter.execution.parallel.enabled=true
-            -Djunit.jupiter.execution.parallel.mode.classes.default=concurrent
-            -Djunit.jupiter.execution.timeout.default=30m
             -Djdk.attach.allowAttachSelf
           </argLine>
         </configuration>
@@ -312,7 +300,11 @@
           </dependency>
         </dependencies>
         <configuration>
-          <oldVersion>3.0.1</oldVersion>
+          <analysisConfigurationFiles>
+            <configurationFile>
+              <path>api-changes.json</path>
+            </configurationFile>
+          </analysisConfigurationFiles>
         </configuration>
         <executions>
           <execution>
@@ -395,7 +387,7 @@
     <dependency>
       <groupId>org.hdrhistogram</groupId>
       <artifactId>HdrHistogram</artifactId>
-      <version>2.2.1</version>
+      <version>2.2.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -420,7 +412,7 @@
         <configuration>
           <additionalOptions>
             <additionalOption>--snippet-path</additionalOption>
-            <additionalOption>${build.testSourceDirectory}/examples/</additionalOption>
+            <additionalOption>${project.build.testSourceDirectory}/examples/</additionalOption>
           </additionalOptions>
           <detectJavaApiLink>true</detectJavaApiLink>
         </configuration>
